--- a/scss/theme/_footer.scss
+++ b/scss/theme/_footer.scss
@@ -20,3 +20,11 @@ footer {
   -ms-flex-positive: 1;
   flex-grow: 1;
 }
+
+footer .row {
+  flex-wrap: nowrap;
+
+  & > * {
+    width: auto;
+  }
+}
